--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<title>كابوس | قصص مرعبة</title>
 
+<style>
+body{
+  margin:0;
+  font-family: "Tahoma", sans-serif;
+  background:#0b0b0b;
+  color:#eee;
+}
+
+header{
+  background:#000;
+  padding:25px;
+  text-align:center;
+  border-bottom:2px solid #8b0000;
+}
+
+header h1{
+  color:#b30000;
+  margin:0;
+  font-size:36px;
+  letter-spacing:2px;
+}
+
+header p{
+  color:#aaa;
+  margin-top:8px;
+}
+
+.container{
+  max-width:900px;
+  margin:30px auto;
+  padding:15px;
+}
+
+.story{
+  background:#141414;
+  margin-bottom:20px;
+  padding:20px;
+  border-radius:8px;
+  border-right:5px solid #8b0000;
+}
+
+.story h2{
+  margin:0;
+  color:#ff4d4d;
+}
+
+.story p{
+  color:#ccc;
+  line-height:1.8;
+}
+
+.story a{
+  display:inline-block;
+  margin-top:10px;
+  color:#ff8080;
+  text-decoration:none;
+}
+
+.story a:hover{
+  text-decoration:underline;
+}
+
+footer{
+  text-align:center;
+  padding:20px;
+  color:#666;
+  font-size:14px;
+  border-top:1px solid #222;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>كابوس</h1>
+  <p>قصص مرعبة… تقرأها؟ تتحمّل العواقب؟</p>
+</header>
+
+<div class="container">
+
+  <div class="story">
+    <h2>👁️ قصة: البيت الذي لا ينام</h2>
+    <p>
+      انتقلنا إلى بيت قديم في أطراف المدينة…
+      منذ الليلة الأولى، بدأنا نسمع خطوات فوق السقف،
+      رغم أن الطابق العلوي مهجور منذ عشرات السنين.
+    </p>
+    <a href="story1.html">اقرأ القصة كاملة →</a>
+  </div>
+
+  <div class="story">
+    <h2>🕯️ قصة: الطَرق عند الثالثة</h2>
+    <p>
+      في كل ليلة تمامًا عند الساعة الثالثة،
+      يُسمع طرق خفيف على الباب…
+      وعندما تفتحه، لا تجد أحدًا.
+    </p>
+    <a href="story2.html">اقرأ القصة كاملة →</a>
+  </div>
+
+  <div class="story">
+    <h2>🩸 قصة: الرسالة الأخيرة</h2>
+    <p>
+      وصلتني رسالة من رقم مجهول تقول:
+      "لا تفتح الباب مهما سمعت اسمي".
+      بعد دقائق… سُمع صوتي يناديني.
+    </p>
+    <a href="story3.html">اقرأ القصة كاملة →</a>
+  </div>
+
+</div>
+
+<footer>
+  © جميع الحقوق محفوظة | كابوس – معتصم زكارنه
+</footer>
+
+</body>
+  </html>
