--- a/story1.html
+++ b/story1.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<title>البيت الذي لا ينام | كابوس</title>
+<style>
+body{margin:0;font-family:"Tahoma",sans-serif;background:#0b0b0b;color:#eee;}
+header{background:#000;padding:25px;text-align:center;border-bottom:2px solid #8b0000;}
+header h1{color:#b30000;margin:0;font-size:36px;letter-spacing:2px;}
+header p{color:#aaa;margin-top:8px;}
+.container{max-width:900px;margin:30px auto;padding:15px;}
+.story{background:#141414;padding:20px;border-radius:8px;border-right:5px solid #8b0000;}
+.story h2{margin:0;color:#ff4d4d;}
+.story p{color:#ccc;line-height:1.8;margin-bottom:15px;}
+a.back{display:inline-block;margin-top:15px;padding:8px 14px;color:#ff8080;border:1px solid #8b0000;border-radius:6px;text-decoration:none;}
+a.back:hover{background:#8b0000;color:#fff;}
+footer{text-align:center;padding:20px;color:#666;font-size:14px;border-top:1px solid #222;}
+</style>
+</head>
+<body>
 
+<header>
+  <h1>كابوس</h1>
+  <p>البيت الذي لا ينام</p>
+</header>
+
+<div class="container">
+  <div class="story">
+    <h2>👁️ البيت الذي لا ينام</h2>
+    <p>
+      انتقلنا إلى بيت قديم في أطراف المدينة. المنزل كان مهجوراً منذ عقود، إلا أن شعور الغرابة يسيطر على المكان.
+    </p>
+    <p>
+      منذ الليلة الأولى، بدأنا نسمع خطوات فوق السقف رغم أن الطابق العلوي كان فارغاً تماماً. أصواتاً خافتة… لكن واضحة بما يكفي لإيقاظ أي شخص.
+    </p>
+    <p>
+      كل يوم يزداد الغموض… الأشياء تتحرك من مكانها، أبواب تُفتح وتُغلق من تلقاء نفسها، والبيت لا ينام أبدًا. حتى القطط التي جلبناها لم تجرؤ على البقاء في الداخل.
+    </p>
+    <p>
+      في الليلة الثالثة، لاحظنا ظل يمر بسرعة عبر الرواق. حاولنا تتبعه لكن اختفى. القلب يدق بسرعة… والبرد يسيطر علينا. شعور بأن هناك من يراقبنا طوال الوقت.
+    </p>
+    <p>
+      بعد أسبوع، بدأنا نرى رسومات غريبة على الجدران، وكأن شخصاً ما يراقبنا ويريد إيصال رسالة… رسالة لم نفهمها بعد.
+    </p>
+    <p>
+      نحن ما زلنا نسمع الأصوات… البيت لا ينام… وكل ليلة يزيد الرعب من حولنا.
+    </p>
+
+    <a class="back" href="index.html">← العودة للقصص</a>
+  </div>
+</div>
+
+<footer>
+  © جميع الحقوق محفوظة | كابوس – معتصم زكارنه
+</footer>
+
+</body>
+    </html>
